[package]
name = "injection-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pantry-rs = "0.0.4"
quick-error = "2.0.1"
uuid = { version = "1.3.4", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["serde_json", "stream"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
async-trait = "0.1.73"
futures = "0.3.28"
dyn-clone = "1.0.14"
clap = { version = "4.4.6", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
log = "0.4.20"
maplit = "1.0.2"
env_logger = "0.10.0"
colored = "2.0.4"
prettytable-rs = "0.10.0"
textdistance = "1.0.2"




